--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,197 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  position: relative;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #000;
+  color: #dedede;
+}
+a {
+  text-decoration: none;
+}
+section {
+  min-height: 100vh;
+  padding: 0 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/************************
+*************************
+        Nav menu 
+************************
+*************************/
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  color: #dedede;
+  font-size: 28px;
+  font-weight: 900;
+}
+
+.burger,
+.close {
+  position: absolute;
+  top: 0.75em;
+  right: 20px;
+  font-size: 24px;
+  cursor: pointer;
+}
+.navList {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  transform: translateY(100%);
+  height: 100vh;
+  width: 100%;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.close {
+  color: #dedede;
+}
+.navList .menuItem {
+  padding: 0.45em 1.8em;
+  color: #dedede;
+  font-size: 22px;
+}
+.navList .buy {
+  border: 2px solid #dedede;
+  border-radius: 30px;
+}
+
+/************************
+*************************
+        Home
+************************
+*************************/
+
+.home {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.home .cover {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.topLeft {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 3em;
+}
+.topLeft h1 {
+  font-size: 44px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.topLeft p {
+  margin: 0 auto;
+  padding: 10px 0 8px;
+  max-width: 43ch;
+  font-size: 15px;
+}
+.ctas {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cta {
+  margin: 8px 0;
+  border: 2px solid transparent;
+  border-radius: 30px;
+  background: #1d4e89;
+  color: #dedede;
+  font-weight: 500;
+  font-size: 18px;
+  padding: 0.75em 0;
+  width: 65%;
+  text-align: center;
+}
+.cta:last-of-type {
+  border-color: #dedede;
+  background: transparent;
+}
+.bottomLeft {
+  position: relative;
+}
+
+.comp1 {
+  display: block;
+  max-width: 800px;
+  width: 100%;
+}
+.phone1 {
+  position: absolute;
+  bottom: 20%;
+  right: 50px;
+  transform: translateY(-20%);
+  /* min-width: 120px;
+  width: 20vw; */
+  max-width: 140px;
+  width: 24vw;
+}
+
+.companies {
+  width: 100%;
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1em 0;
+}
+
+@media (min-width: 749px) {
+  .home .cover {
+    flex-direction: row;
+  }
+  .topLeft {
+    width: 50%;
+  }
+  .phone1 {
+    bottom: 32%;
+    transform: translateY(-32%);
+  }
+}
+
+.companies img {
+  height: 30px;
+}
+.services {
+  background-color: pink;
+}
+
+.about {
+  background-color: gray;
+}
+
+.contact {
+  background-color: purple;
 }
