--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ nav {
   right: 0;
   z-index: 9;
   padding: 1em;
+  background: #000;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -330,19 +331,28 @@ nav {
 *************************/
 .homeContact {
   min-height: 45vh;
-  background: #20bac5;
-  color: #000;
+  padding: 0;
+  padding-top: 3em;
+  background: #1d4e89;
+  color: #dedede;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
+.homeContact h3 {
+  padding: 6px 0;
+  color: #dedede;
+  background: #000;
+  font-size: 22px;
+}
 .contactForm {
-  max-width: 360px;
+  /* max-width: 360px; */
   width: 100%;
 }
 .contactForm h3 {
   text-align: center;
+  margin-bottom: 0.5em;
 }
 .contactForm form {
   display: flex;
@@ -351,6 +361,7 @@ nav {
   align-items: center;
 }
 .contactForm form input {
+  max-width: 375px;
   width: 100%;
   margin: 4px 0;
   padding: 4px;
@@ -361,7 +372,7 @@ nav {
 
 #message {
   position: relative;
-  min-height: 38px;
+  min-height: 78px;
 }
 #message span {
   position: absolute;
@@ -372,7 +383,49 @@ nav {
 #contactSubmit {
   width: 50%;
 }
-
+.homeContact .contactInfo {
+  width: 100%;
+  margin: 2em 0 1em;
+  text-align: center;
+}
+.homeContact .contactInfo .lnk {
+  position: relative;
+  margin: 3px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #dedede;
+  font-weight: 700;
+}
+.homeContact .contactInfo .lnk .faI {
+  font-size: 22px;
+}
+.homeContact .contactInfo .lnk span {
+  padding: 5px 8px 7px;
+}
+.homeContact .contactCo {
+  width: 100%;
+  padding: 1em 0;
+  border-top: 2px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.homeContact .contactCo .social {
+  width: 100%;
+  margin: 1.5em 0 0.5em;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.homeContact .contactCo .social a {
+  color: #dedede;
+  font-size: 28px;
+}
+.homeContact .logo {
+  color: #000;
+}
 @media (min-width: 749px) {
   .home .cover {
     flex-direction: row;
