--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ nav {
 
 .logo {
   color: #dedede;
-  font-size: 28px;
+  font-size: 26px;
   font-weight: 900;
 }
 
@@ -165,6 +165,7 @@ nav {
 
 .companies {
   width: 100%;
+  margin: 2em 0;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(2, 1fr);
@@ -210,7 +211,7 @@ nav {
 }
 .homeServices .service {
   width: 100%;
-  padding: 0.5em 0.75em;
+  padding: 1em 0.75em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -247,7 +248,7 @@ nav {
 *************************/
 
 .homeAbout {
-  padding: 1.5em 0;
+  padding: 3em 0;
 }
 
 .homeAbout h2 {
@@ -261,6 +262,9 @@ nav {
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
+}
+.feature:first-of-type {
+  margin-top: 2em;
 }
 
 .feature .bottomLeft {
@@ -295,7 +299,7 @@ nav {
 }
 
 .aboutBottom {
-  padding: 3em 1em;
+  padding: 3em 1em 4em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -322,7 +326,7 @@ nav {
 }
 
 .phone2 {
-  bottom: 0;
+  bottom: 20px;
 }
 /************************
 *************************
