--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,7 @@ nav {
 }
 
 .home .cover {
+  max-width: 1800px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -104,6 +105,7 @@ nav {
   align-items: center;
 }
 .topLeft {
+  /* max-width: 750px; */
   width: 100%;
   text-align: center;
   margin-bottom: 1.5em;
@@ -148,7 +150,7 @@ nav {
   margin: 0 0 3em;
 }
 .landingIll {
-  max-width: 800px;
+  max-width: 900px;
   width: 100%;
 }
 /* ????? */
@@ -501,15 +503,23 @@ footer {
     height: 45px;
   }
 } */
-@media (min-width: 749px) {
+@media (min-width: 1000px) {
   .home .cover {
     padding: 0 1em;
   }
   .home .cover,
+  .ctas,
   .feature {
     flex-direction: row;
   }
-
+  .topLeft p {
+    padding: 5px 0 40px;
+  }
+  .ctas .cta {
+    margin: 0 20px;
+  }
+}
+@media (min-width: 749px) {
   .feature {
     max-width: 1800px;
     width: 100%;
