--- a/src/index.css
+++ b/src/index.css
@@ -271,22 +271,17 @@ nav {
 }
 .feature .bottomLeft h3 {
   font-size: 28px;
-  text-align: center;
+  text-align: left;
 }
 .feature .bottomLeft p {
   padding: 0.5em 0;
   margin: 0 auto;
-  width: clamp(45ch, 50%, 75ch);
   font-size: 15px;
 }
 .feature .bottomLeft .featureLnk {
-  padding: 0 0.5em;
   color: #dedede;
   font-size: 18px;
   font-weight: 500;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
 }
 .feature .bottomLeft .featureLnk .arrow {
   margin-left: 5px;
