--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,7 @@ nav {
   font-size: 18px;
   padding: 0.75em 0;
   max-width: 320px;
-  width: 60%;
+  width: 290px;
   text-align: center;
 }
 .cta:last-of-type {
@@ -393,7 +393,13 @@ footer {
   .feature {
     flex-direction: row;
   }
+  .topLeft {
+    padding: 0 2em;
+    text-align: left;
+  }
   .topLeft p {
+    margin: 0;
+    max-width: 100%;
     padding: 5px 0 40px;
   }
   .ctas .cta {
